# DopaBlocker

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  INICIALIZACAO.md  README.md  dopablocker.db  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs  dopablocker.db
backend/migrations/: 001_initial.sql  002_parental_fixes.sql  003_email_verification.sql  004_device_events.sql
backend/src/: app.rs  bootstrap.rs  config.rs  db.rs  errors.rs  main.rs  middleware.rs  models.rs
backend/src/core/: config.rs  db.rs  errors.rs  mod.rs  models.rs  util.rs
backend/src/core/auth/: device_token.rs  jwks.rs  jwt.rs  middleware.rs  mod.rs
backend/src/features/: mod.rs
backend/src/features/auth/: email_code.rs  email_delivery.rs  mod.rs  routes.rs  service.rs  user.rs
backend/src/features/blocklist/: mod.rs  routes.rs  service.rs
backend/src/features/devices/: events.rs  mod.rs  routes.rs  service.rs
backend/src/routes/: auth.rs  blocklist.rs  devices.rs  mod.rs
backend/src/services/: auth_service.rs  blocklist_service.rs  device_service.rs  mod.rs  user_service.rs  util.rs
desktop/: .env.example  README.md  package.json  vite.config.ts
desktop/scripts/: dev-with-backend.mjs
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 001_local_cache.sql  002_child_session.sql
desktop/src-tauri/src/: DopaBlocker.code-workspace  commands.rs  db.rs  lib.rs  main.rs
desktop/src-tauri/src/blocking/: adult_filter.rs  block_page.html  block_page.rs  block_reason.rs  ca.rs  dns_cache.rs  dns_proxy.rs  dns_upstream.rs  engine.rs  lifecycle.rs  mod.rs  system_dns.rs  tls_resolver.rs  util.rs  wfp.rs
desktop/src-tauri/src/blocking/dns/: cache.rs  mod.rs  proxy.rs  upstream.rs
desktop/src-tauri/src/blocking/os/: mod.rs  system_dns.rs  wfp.rs
desktop/src-tauri/src/blocking/page/: block_page.html  mod.rs  server.rs  tls_resolver.rs
desktop/src-tauri/src/blocking/policy/: block_reason.rs  mod.rs
desktop/src/lib/: types.ts
desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
docs/: API.md  ARCHITECTURE.md  AUTH_STATE_MACHINE.md  CONCEPTS.md  DECISOES_E_ROADMAP.md  DEVELOPMENT_GUIDE.md  GAPS.md  GOLDEN_PATH.md  IMPLEMENTACAO.md  PROTOTYPE.md  RUNBOOK.md  WFP_HARDENING.md  crie-um-plano-de-effervescent-flamingo.md  vou-construir-o-app-noble-bee.md
infra/: .firebaserc  compose.yml  firestore.rules
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/: settings.gradle.kts
mobile/android/app/: build.gradle.kts  google-services.json.placeholder.bak
mobile/lib/: app.dart  main.dart  routes.dart  theme.dart
mobile/lib/channels/: blocking_channel.dart
mobile/lib/core/: api_client.dart  auth_header_holder.dart  constants.dart  database_service.dart  (+1 more)
shared/: Cargo.toml
shared/data/: doh-fqdns.txt  doh-ipv4.txt  doh-ipv6.txt
shared/src/: bloom_filter.rs  domain_matcher.rs  lib.rs  models.rs  parental.rs
(+140 files in other folders)
