[package]
name = "dopablocker-backend"
version = "0.1.0"
edition = "2021"
description = "DopaBlocker REST API server — Rust/Axum"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
tokio-rusqlite = "0.6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dopablocker-shared = { path = "../shared" }
