[package]
name = "dopablocker-desktop"
version = "0.1.0"
description = "DopaBlocker Desktop — Tauri 2 app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dopablocker_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
dopablocker-shared = { path = "../../shared" }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
tokio-rusqlite = "0.6"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
tracing = "0.1"
